# zero-letter-serving

./: .env  Cargo.toml  Dockerfile  configuration.yaml  docker-compose.yaml
migrations/: 20250922114923_create_subscriptions_table.sql
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check_test.rs
