[package]
name = "zero"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.226", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "uuid",
    "chrono",
    "migrate"
] }
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
secrecy = { version = "0.10.3", features = ["serde"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
tracing-actix-web = "0.7.19"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
actix-web = "4.11.0"
reqwest = "0.12.23"
config = "0.15.16"
once_cell = "1.21.3"